--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ td{
 	text-align:center;
 }
 #black{
-	background-color:rgba(0, 0, 0, 0);
+	background-color:rgb(0, 0, 0);
 	color:white;
 }
 /* Your CSS Code here. */
